# chainlit-deploy-flyio

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
chainlit-deploy-flyio/: app.py  conversation_bot.handlebars  conversation_bot.py
