[tool.poetry]
name = "chainlit-deploy-flyio"
version = "0.1.0"
description = ""
authors = ["Masahiro Nishimi <mah@edged-edge.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
guidance = "^0.0.61"
chainlit = "^0.2.111"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
